first edition autorun Penglai-TEE: * add NEMU * add penglai-driver * still may have some problem: make initialize sequence may not right

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "riscv-rootfs"]
 	path = riscv-rootfs
 	url = https://github.com/PengXuanyao/rootfs-for-nemu
+[submodule "NEMU"]
+	path = NEMU
+	url = https://github.com/PengXuanyao/NEMU-with-Penglai.git
